# maec

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  create_static.py  temp.py
cmake/: LLVMPolly.cmake  NativeBuild.cmake  Optimize.cmake
demos/: CMakeLists.txt  alsa_demo.cpp  call_benchmark.cpp  chain_bench.cpp  chain_bench_dyn.cpp  char_conversion.cpp  container_benchmark.cpp  coversion_experiment.cpp  fft_radix2_benchmark.cpp  fftw_demo.cpp  mstream_bench.cpp  parallel_bench.cpp  static_bench.cpp  static_module.cpp  vector_pass.cpp
demos/freq_plot/: CMakeLists.txt  freq_plot.cpp
demos/iir_plot/: CMakeLists.txt  iir_plot.cpp
demos/parallel_plot/: CMakeLists.txt  parallel_plot.cpp
include/: fund_oscillator.hpp
include/cmae/: alsa_module.hpp  alsa_output.hpp  amp_module.hpp  audio_buffer.hpp  audio_collection.hpp  audio_module.hpp  base_module.hpp  base_oscillator.hpp  base_output.hpp  chrono.hpp  const.hpp  envelope.hpp  fund_oscillator.hpp  meta_audio.hpp  module_mixer.hpp  module_param.hpp  sink_module.hpp  source_module.hpp  utils.hpp
include/cmae/dsp/: conv.hpp
include/maec/: alsa_module.hpp  amp_module.hpp  audio_buffer.hpp  audio_module.hpp  base_module.hpp  base_oscillator.hpp  chrono.hpp  const.hpp  envelope.hpp  filter_module.hpp  fund_oscillator.hpp  meta.hpp  meta_audio.hpp  module_mixer.hpp  module_param.hpp  parallel.hpp  sink_module.hpp  source_module.hpp  utils.hpp
include/maec/dsp/: buffer.hpp  const.hpp  conv.hpp  filt.hpp  ft.hpp  iir.hpp  kernel.hpp  matrix.hpp  util.hpp  window.hpp
include/maec/io/: alsa_module.hpp  mstream.hpp  wav.hpp
src/: alsa_module.cpp  alsa_output.cpp  amp_module.cpp  audio_buffer.cpp  audio_module.cpp  base_module.cpp  base_oscillator.cpp  chrono.cpp  envelope.cpp  filter_module.cpp  fund_oscillator.cpp  meta_audio.cpp  module_mixer.cpp  module_param.cpp  sink_module.cpp  source_module.cpp  utils.cpp
src/dsp/: buffer.cpp  conv.cpp  ft.cpp  iir.cpp  kernel.cpp  util.cpp  window.cpp
src/io/: alsa_module.cpp  mstream.cpp  wav.cpp
test/: .clang-tidy  CMakeLists.txt  alsa_module_test.cpp  amp_module_test.cpp  audio_buffer_test.cpp  audio_mod_test.cpp  chrono_test.cpp  constant_oscillator_test.cpp  envelope_test.cpp  fund_oscillator_test.cpp  meta_module_test.cpp  module_mixers_test.cpp  parallel_test.cpp  parameter_test.cpp  sink_module_test.cpp
test/dsp/: buffer_test.cpp  conv_test.cpp  ft_test.cpp  kernel_test.cpp  window_test.cpp
test/io/: alsa_module_test.cpp  mstream_test.cpp  wav_test.cpp
tests/: .clang-tidy  CMakeLists.txt  alsa_base_test.cpp  alsa_module_test.cpp  amp_module_test.cpp  audio_buffer_test.cpp  audio_mod_test.cpp  chrono_test.cpp  constant_oscillator_test.cpp  container_benchmark.cpp  envelope_test.cpp  fund_oscillator_test.cpp  gtest_main.cpp  meta_module_test.cpp  module_mixdown_test.cpp  module_mixers.cpp  module_mixup_test.cpp  parameter_test.cpp  sink_module_test.cpp  utils_test.cpp
tests/dsp/: buffer.cpp  buffer_test.cpp  conv_test.cpp  ft_test.cpp  kernel_test.cpp  matrix_test.cpp  window_test.cpp
ttest/: CMakeLists.txt  alsa_module_test.cpp  envelope_test.cpp  fund_oscillator_test.cpp  meta_module_test.cpp  parameter_test.cpp  utils_test.cpp
ttest/dsp/: buffer_test.cpp  conv_test.cpp  kernel_test.cpp
